<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1">

    <data>

        <variable
            name="track"
            type="com.example.vynils.model.Track" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.associateTrack.AssociateTrack">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTrackName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rectangle_light_orange"
                    android:drawableEnd="@drawable/ic_name"
                    android:ems="10"
                    android:hint="@string/activity_associate_track_name"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTrackMinutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_light_orange"
                        android:ems="10"
                        android:hint="@string/activity_associate_track_minutes"
                        android:inputType="number"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />


                    <EditText
                        android:id="@+id/editTrackSeconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_light_orange"
                        android:ems="10"
                        android:hint="@string/activity_associate_track_seconds"
                        android:inputType="number"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="7dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/light_orange"
                        android:onClick="cancelCreation"
                        android:padding="15dp"
                        android:text="@string/activity_create_album_cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/aguamarina"
                        android:onClick="associateTrack"
                        android:padding="15dp"
                        android:text="@string/activity_create_album_create"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>