<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="Crear track"
        android:src="@drawable/ic_plus"
        android:background="@color/orange"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/imageCover"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:contentDescription="Portada del album"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="10dp"
                    android:paddingHorizontal="15dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <TextView
                            android:id="@+id/albumName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".80"
                            android:layout_marginVertical="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="Nombre del album"
                            android:textColor="@color/white"
                            android:textSize="28sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/albumReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:text="Año"
                            android:layout_weight=".20"
                            android:textColor="@color/white"
                            android:textSize="18sp"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/albumPerformers"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="Artistas"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tracks"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/albumTracks"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/album_detail_track_item"/>


                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>